--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Gervan's Personal Site </title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
+  <body color>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/Gervan 1.jpg" alt="Gervan Picture" width="225"></td>
+        <td><img class="circular" src="images/Gervan 1.jpg" alt="Gervan Picture" width="225"></td>
         <td><h1>Gervan P Nantel</h1>
         <p><em>Director @
           <a href="http://iiconsulttech.com/contact/"><strong>iiConsult tech Inc.</strong></em></a></p>
